--- a/package.json
+++ b/package.json
@@ -7,16 +7,20 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "apexcharts": "^3.30.0",
+    "chart.js": "^3.6.1",
     "jquery": "^3.6.0",
     "md5": "^2.3.0",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
+    "react-awesome-calendar": "^1.0.14",
+    "react-big-calendar": "^0.38.1",
     "react-countup": "^6.1.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "reactstrap": "^9.0.1",
     "sass": "^1.43.5",
+    "socket.io": "^4.4.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
