--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "apexcharts": "^3.30.0",
-    "chart.js": "^3.6.1",
+    "chart.js": "^3.0.0",
+    "darkmode-js": "^1.5.7",
     "jquery": "^3.6.0",
     "md5": "^2.3.0",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-awesome-calendar": "^1.0.14",
     "react-big-calendar": "^0.38.1",
+    "react-chartjs-2": "^4.0.0",
     "react-countup": "^6.1.0",
+    "react-dark": "^1.1.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
