--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "react-countup": "^6.1.0",
     "react-dark": "^1.1.0",
     "react-dom": "^17.0.2",
+    "react-paginate": "^8.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "reactstrap": "^9.0.1",
     "sass": "^1.43.5",
     "socket.io": "^4.4.0",
+    "sweetalert2": "^11.3.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
