--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "apexcharts": "^3.30.0",
     "chart.js": "^3.0.0",
     "darkmode-js": "^1.5.7",
+    "google-map-react": "^2.1.10",
     "jquery": "^3.6.0",
     "md5": "^2.3.0",
     "react": "^17.0.2",
@@ -19,6 +20,7 @@
     "react-countup": "^6.1.0",
     "react-dark": "^1.1.0",
     "react-dom": "^17.0.2",
+    "react-google-maps": "^9.4.5",
     "react-paginate": "^8.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
